# vcmi

./: CMakeLists.txt
android_v2/: .gitignore  build.gradle  local.properties
android_v2/app/: build.gradle  build.gradle.in
android_v2/app/src/main/: AndroidManifest.xml
android_v2/app/src/main/assets/: internalDataHash.txt
android_v2/app/src/main/java/eu/vcmi/vcmi/: MainActivity.java  Storage.java
android_v2/app/src/main/res/raw/: authors.txt
android_v2/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
client/: CMakeLists.txt
cmake_modules/: VersionDefinition.cmake
launcher_v2/: .gitignore  CMakeLists.txt  Cargo.toml  Cargo_TO_EDIT.toml  README.md  VCMI_launcher.rc  build.rs  refresh_translations.ps1  run_android.sh
launcher_v2/.cargo/: config.toml
launcher_v2/assets/: internalDataHash.txt
launcher_v2/macros/: Cargo.toml
launcher_v2/macros/src/: lib.rs
launcher_v2/src/: about_project.rs  first_launch.rs  gui_primitives.rs  lobby.rs  main.rs  mod_manager.rs  platform.rs  settings.rs  utils.rs  vcmi_launcher.rs
launcher_v2/translate/: Cargo.toml  TODO.de.yml  TODO.en.yml  TODO.fr.yml  TODO.pl.yml  TODO.zh.yml  en.yml  pl.yml
