[package]
name = "vcmi_launcher_v2"
version = "1.4.0"
edition = "2021"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
image = { version = "0.24", features = ["png"] }
egui = { version = "0.22" }
egui_extras = { version = "0.22", features = ["image"] }
eframe = { version = "0.22", default-features = false, features = [
    "accesskit",
    "default_fonts",
    "wgpu",
    "android-game-activity",
] }
winit = { version = "0.28.6", features = ["android-game-activity"] }

zip = "0.6.6"
rust-i18n = { git = "https://github.com/PingPongun/rust-i18n.git", branch = "develop" }
# git2 = {version = "0.17.2", features=["vendored-libgit2"]}
reqwest = { version = "0.11.18", features = ["json"] }         # http
tokio = { version = "1.31.0", features = ["rt-multi-thread"] } # async

serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.105"
# serde-enum-str = "0.4.0"

# strum = { version = "0.25.0", features = ["derive"] }
strum = { git = "https://github.com/PingPongun/strum.git", branch = "master", features = [
    "derive",
] } # enum derive macros
atomic_enum = "0.2.0"
# num_cpus = "1.16.0"
vcmi_launcher_macros = { path = "macros/" }
directories = "5.0.1"
sys-locale = "0.3.0"                        #detect system locale
lazy_static = "1.4.0"
# egui-toast = "0.8.0"                        # in app notifications
egui-toast = { git = "https://github.com/PingPongun/egui-toast.git", branch = "main" } # in app notifications
# font-kit = "0.11.0" #load system fonts
educe = "0.4.22"                              # struct derive macros
fs_extra = "1.3.0"                            # copy dirs
rfd = { version = "0.12.0", optional = true } # file dialog
os_info = "3.7.0"
fern = "0.6.2"
humantime = "2.1.0"

[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.10"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.13.1"
jni = { version = "0.21.1", features = ["invocation"] }
ndk-context = "0.1.1"

[build-dependencies]
embed-resource = "2.3.0"
cc = "1.0.83"
git-sha1 = { version = "1.1", optional = true }

# [patch.crates-io]
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# egui_extras = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

[features]
default = ["enable_gitversion"]
desktop = ["dep:rfd"]
enable_gitversion = ["dep:git-sha1"]

[lib]
path = "src/main.rs"
name = "vcmilauncherv2lib"
crate_type = ["cdylib", "staticlib"]

[[bin]]
path = "src/main.rs"
name = "vcmilauncherv2"
required-features = ["desktop"]

[profile.release]
opt-level = 3
lto = "thin"      # Enable link time optimization
strip = true      # Automatically strip symbols from the binary.
codegen-units = 4 # Reduce parallel code generation units

[profile.MinSizeRel]
inherits = "release"
opt-level = "s"
lto = "thin"
strip = true
codegen-units = 4

[profile.RelWithDebInfo]
inherits = "dev"
opt-level = 2            #
debug = true
debug-assertions = false #
overflow-checks = false  #
lto = false
panic = 'unwind'
incremental = true
codegen-units = 32       #
